syntax = "proto3";

package api.mapService;

option go_package = "map/api/mapService;mapService";

service MapService {
	rpc GetDrivingInfo (GetDrivingInfoReq) returns (GetDrivingReply);
}

message GetDrivingInfoReq {
	string origin = 1; // 起点
	string destination = 2; // 终点
}
message GetDrivingReply {
	string origin = 1;
	string destination = 2;
	string distance = 3; // 行驶距离
	string duration = 4; // 行驶时长
}
